--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
             <button class="dark button_hover" onclick="display('2')">2</button>
             <button class="dark button_hover" onclick="display('3')">3</button>
             <button class="dark function_hover" onclick="display('+')">+</button>
-            
+
             <button class="dark button_hover" onclick="display('.')">.</button>
             <button class="dark button_hover" onclick="display('0')">0</button>
             <button class="dark" onclick="calculate()" id="large">=</button>
